--- a/package.json
+++ b/package.json
@@ -23,23 +23,15 @@
     "nestjs:generate:filter": "nest g filter shared/infraestructure/exception-filters/new-filter",
     "test": "npx dotenv-cli -e .env.test -- jest --runInBand",
     "test:unit": "npx dotenv-cli -e .env.test -- jest --runInBand --config ./jest.unit.config.ts",
-    "test:unit:users-controller": "npm run test:unit users.controller",
-    "test:unit:wrapper-data": "npm run test:unit wrapper-data.interceptor",
-    "test:unit:conflict-error-filter": "npm test:unit test conflict-error.filter",
-    "test:unit:not-found-error-filter": "npm run test:unit not-found-error.filter",
-    "test:unit:invalid-password-error-filter": "npm run test:unit invalid-password-error.filter",
+    "test:unit:auth": "npm run test:unit auth.service",
+    "test:unit:notification-output-mapper": "npm run test:unit notification-output.mapper",
+    "test:unit:notification-send-notification-usecase": "npm run test:unit send-notification.usecase",
+    "test.unit:notification-entity": "npm run test:unit notification.entity",
     "test:int": "npx dotenv-cli -e .env.test -- jest --runInBand --config ./jest.int.config.ts",
-    "test:int:user-mapper": "npm run test:int user-model.mapper",
-    "test:int:user-prisma-repository": "npm run test:int user-prisma.repository",
-    "test:e2e": "npx dotenv-cli -e .env.test -- jest --runInBand --config ./jest.e2e.config.ts",
-    "test:e2e:create-user": "npm run test:e2e create.e2e",
-    "test:e2e:update-user": "npm run test:e2e update.e2e",
-    "test:e2e:findone-user": "npm run test:e2e findone.e2e",
-    "test:e2e:remove-user": "npm run test:e2e remove.e2e",
-    "test:e2e:search-user": "npm run test:e2e search.e2e",
-    "test:e2e:update-password": "npm run test:e2e updatepassword.e2e",
-    "test:e2e:login": "npm run test:e2e login.e2e",
-    "test:e2e:invalid-credentials-error-filter": "npm run test:e2e invalid-credentials-error.filter",
+    "test:int:notification-entity": "npm run test:int notification.entity",
+    "test:int:notification-prisma-repository": "npm run test:int notification-prisma.repository",
+    "test:int:notification-notification-model-mapper": "npm run test:int notification-model.mapper",
+    "test:int:notification-notification-prisma-repository": "npm run test:int notification-prisma.repository",
     "test:watch": "jest --watch",
     "test:cov": "npx dotenv-cli -e .env.test -- jest --coverage --runInBand --config ./jest.config.ts",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
