--- a/.github/workflows/run-int-tests .yml
+++ b/.github/workflows/run-int-tests .yml
@@ -22,6 +22,12 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Run prisma generate
+      run: npm run prisma:generate:test
+
+    - name: Run prisma migrate  
+      run: npm run prisma:migrate:test
+
     - name: Run tests
       run: npm run test:int
       env:
