fix: int tests ci

--- a/.github/workflows/run-int-tests .yml
+++ b/.github/workflows/run-int-tests .yml
@@ -24,10 +24,22 @@ jobs:
 
     - name: Run prisma generate
       run: npm run prisma:generate:test
-
+      env:
+        DATABASE_URL: fake_url
+        PORT: 3000
+        NODE_ENV: test
+        JWT_SECRET: test_secret
+        JWT_EXPIRES_IN: 86400
+        
     - name: Run prisma migrate  
       run: npm run prisma:migrate:test
-
+      env:
+        DATABASE_URL: fake_url
+        PORT: 3000
+        NODE_ENV: test
+        JWT_SECRET: test_secret
+        JWT_EXPIRES_IN: 86400
+        
     - name: Run tests
       run: npm run test:int
       env:
