fix: int tests ci

--- a/.github/workflows/run-int-tests .yml
+++ b/.github/workflows/run-int-tests .yml
@@ -25,16 +25,16 @@ jobs:
     - name: Run prisma generate
       run: npm run prisma:generate:test
       env:
-        DATABASE_URL: fake_url
+        DATABASE_URL: postgresql://postgres:docker@localhost:5432/projectdb?schema=test
         PORT: 3000
         NODE_ENV: test
         JWT_SECRET: test_secret
         JWT_EXPIRES_IN: 86400
-        
+
     - name: Run prisma migrate  
       run: npm run prisma:migrate:test
       env:
-        DATABASE_URL: fake_url
+        DATABASE_URL: postgresql://postgres:docker@localhost:5432/projectdb?schema=test
         PORT: 3000
         NODE_ENV: test
         JWT_SECRET: test_secret
@@ -43,7 +43,7 @@ jobs:
     - name: Run tests
       run: npm run test:int
       env:
-        DATABASE_URL: fake_url
+        DATABASE_URL: postgresql://postgres:docker@localhost:5432/projectdb?schema=test
         PORT: 3000
         NODE_ENV: test
         JWT_SECRET: test_secret
