--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,8 @@ jobs:
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
       - name: 'Run Prisma Migrations'
         run: |
-          npx prisma generate
-          npx prisma migrate deploy
+          npx prisma generate --schema ./src/shared/infraestructure/database/prisma/schema.prisma
+          npx prisma migrate --schema ./src/shared/infraestructure/database/prisma/schema.prismadeploy
       - name: 'Authenticate to GCP'
         uses: 'google-github-actions/auth@v1'
         with:
@@ -49,15 +49,15 @@ jobs:
 
       - name: 'Build and push Docker image'
         run: |
-          docker build -t gcr.io/light-ratio-447800-d5/video-processing .
-          docker push gcr.io/light-ratio-447800-d5/video-processing
+          docker build -t gcr.io/light-ratio-447800-d5/notifications .
+          docker push gcr.io/light-ratio-447800-d5/notifications
       - name: 'Deploy to Cloud Run'
         run: |
           # Save the service account key to a file
           echo '${{ secrets.GCLOUD_KEY_FILENAME }}' > /tmp/gcloud-key.json
           # Deploy with secrets and environment variables
-          gcloud run deploy video-processing \
-            --image gcr.io/light-ratio-447800-d5/video-processing \
+          gcloud run deploy notifications \
+            --image gcr.io/light-ratio-447800-d5/notifications \
             --platform managed \
             --set-secrets DATABASE_URL=projects/470771286195/secrets/DATABASE_URL:latest \
             --set-secrets GOOGLE_APPLICATION_CREDENTIALS=projects/470771286195/secrets/GOOGLE_APPLICATION_CREDENTIALS:latest \
@@ -73,7 +73,7 @@ jobs:
             --cpu 1 \
             --min-instances 1
           # Set IAM policy binding for public access
-          gcloud run services add-iam-policy-binding video-processing \
+          gcloud run services add-iam-policy-binding notifications \
             --region=us-central1 \
             --member=allUsers \
             --role=roles/run.invoker
