fix: package.json

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prisma:generate:development": "npx dotenv-cli -e .env.development -- npx prisma generate --schema ./src/shared/infraestructure/database/prisma/schema.prisma",
     "prisma:generate": "npx dotenv-cli -e .env -- npx prisma generate --schema ./src/shared/infraestructure/database/prisma/schema.prisma",
     "prisma:migrate:development": "npx dotenv-cli -e .env.development -- npx prisma migrate dev --schema ./src/shared/infraestructure/database/prisma/schema.prisma",
-    "prisma:migrate:production": "npx dotenv-cli -e .env.production deploy -- npx prisma migrate dev --schema ./src/shared/infraestructure/database/prisma/schema.prisma" ,
+    "prisma:migrate:production": "npx dotenv-cli -e .env.production -- npx prisma migrate deploy --schema ./src/shared/infraestructure/database/prisma/schema.prisma" ,
     "prisma:migrate:reset:development": "npx dotenv-cli -e .env.development -- npx prisma migrate reset --schema ./src/shared/infraestructure/database/prisma/schema.prisma"
   },
   "dependencies": {
