--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
